# full-stack-web

./: .gitignore  .gitmodules  3logo.jfif  CMakeLists.txt  build.py  build.sh  c++email.py  community.html  design.html  package-lock.json  package.json  portfolio.html  tsconfig.json
api/: login_api.ts
css/: master.css  portfolio.css
database/: users.db
email_template/: email.html  email_after_otp.html  email_before_otp.html
frontend/: 404.html  FaQs.html  about.html  community.html  contact.html  design.html  email.html  index.html  login.html  pay.html  portfolio.html  pricing.html  profile.html  register.html  service.html  user_profile.html  verify.html
frontend/api/: login_api.js
frontend/css/: community.css  design.css  login.css  master.css  pricing.css  profile.css  service.css
frontend/js/: community.js  design.js  login.js  main.js  pricing.js  profile.js  register.js  verify.js
server/: main.cpp
server/resources/: database.cpp  database.hpp  root.cpp  root.hpp
server/resources/creditials/login/: login.cpp  login.hpp
server/resources/creditials/signup/: signup.cpp  signup.hpp
server/resources/creditials/verify/: verify.cpp  verify.hpp
server/resources/root/: root.cpp  root.hpp
server/resources/userdata/personal/: personal_info.cpp  personal_info.hpp
server/util/: email.cpp  email.hpp  security.cpp  security.hpp
